@startuml error_log_contract

!pragma layout smetana
skinparam packageStyle rectangle
skinparam defaultFontName Inter

package "adapter.in.web.rest" {
  interface "ErrorLogRestController" <<RestController>> {
    + createErrorLog(req: ErrorLogRequest): ResponseEntity<ErrorLogResponse>
    + updateErrorLog(id: UUID, req: ErrorLogRequest): ResponseEntity<ErrorLogResponse>
    + deleteErrorLog(id: UUID): ResponseEntity<Void>
    + getErrorLogById(id: UUID): ResponseEntity<ErrorLogResponse>
    + recordFailure(id: UUID, req: ErrorLogActionRequest): ResponseEntity<OperationStatus>
  }
}

package "adapter.in.web.graphql" {
  interface "ErrorLogGraphQLResolver" <<GraphQLResolver>> {
    + listErrorLogs(filter: ErrorLogFilterInput): List<ErrorLog>
  }
}

package "application.port.in" {
  interface "ErrorLogCommandService" <<Service>> {
    + createErrorLog(req: ErrorLogRequest): ErrorLogResponse
    + updateErrorLog(id: UUID, req: ErrorLogRequest): ErrorLogResponse
    + deleteErrorLog(id: UUID): void
    + recordFailure(id: UUID, req: ErrorLogActionRequest): OperationStatus
  }

  interface "ErrorLogQueryService" <<Service>> {
    + getErrorLogById(id: UUID): ErrorLogResponse
    + listErrorLogs(filter: ErrorLogFilterInput): List<ErrorLog>
  }
}

package "adapter.out.persistence" {
  interface "ErrorLogRepository" <<Repository>> {
    + save(entity: ErrorLog): ErrorLog
    + findById(id: UUID): Optional<ErrorLog>
    + findByExample(example: Example<ErrorLog>): List<ErrorLog>
    + deleteById(id: UUID): void
  }
}

"ErrorLogRestController"  ..> "ErrorLogCommandService" : uses
"ErrorLogRestController"  ..> "ErrorLogQueryService" : uses
"ErrorLogGraphQLResolver" ..> "ErrorLogQueryService" : uses
"ErrorLogCommandService"  ..> "ErrorLogRepository" : uses
"ErrorLogQueryService"    ..> "ErrorLogRepository" : uses

@enduml
